# sample_workflow

./: .pre-commit-config.yaml  my_function.py  pyproject.toml  test_my_function.py
.github/workflows/: sample.yaml
