[tool.poetry]
name = "book_store"
version = "0.1.0"
description = ""
authors = ["Jan Giacomelli <jan@typless.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
requests = "^2.24.0"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
