[tool.poetry]
name = "book_store"
version = "0.1.0"
description = ""
authors = ["Jan Giacomelli <jan@typless.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
